src/tests/routes/me/tokens/snapshots/all__routes__me__tokens__create__create_token_with_null_scopes.snap
---
source: src/tests/routes/me/tokens/create.rs
expression: response.into_json()
---
{
  "api_token": {
    "crate_scopes": null,
    "created_at": "[datetime]",
    "endpoint_scopes": null,
    "expired_at": null,
    "id": "[id]",
    "last_used_at": "[datetime]",
    "name": "bar",
    "token": "[token]"
  }
}
