src/tests/routes/me/tokens/snapshots/all__routes__me__tokens__create__create_token_with_scopes-2.snap
---
source: src/tests/routes/me/tokens/create.rs
expression: app.emails_snapshot()
---
To: foo@example.com
From: noreply@crates.io
Subject: New API token created
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

Hello foo!

A new API token with the name "bar" was recently added to your crates.io ac=
count.

If this wasn't you, you should revoke the token immediately: https://crates=
.io/settings/tokens
